# dynamic-computational-nets

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  DVS.pro  README.md  elementsort.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  resources.qrc
model/: Connection.cpp  Connection.h  ElementSort.cpp  ElementSort.h  NetClass.cpp  NetClass.h  NonTerminalTransition.cpp  NonTerminalTransition.h  ObjectNet.cpp  ObjectNet.h  Place.cpp  Place.h  ProjectGraphicsObject.cpp  ProjectGraphicsObject.h  ProjectModel.cpp  ProjectModel.h  ProjectNamedObject.cpp  ProjectNamedObject.h  ProjectObject.cpp  ProjectObject.h  TerminalTransition.cpp  TerminalTransition.h  Transition.cpp  Transition.h
model/base/: ProjectGraphicsObject.cpp  ProjectNamedObject.cpp  ProjectNamedObject.h  ProjectObject.cpp  ProjectObject.h
translations/: translation_en.ts  translation_ru.ts
ui/: MainWindow.cpp  MainWindow.h  mainwindow.ui
ui/redactor/: ObjectNetRedactor.cpp  ObjectNetRedactor.h
ui/redactor/items/: ArrowItem.cpp  ArrowItem.h  NetObjectItem.cpp  NetObjectItem.h
ui/viewmodel/: DataWidget.cpp  DataWidget.h  ObjectWithProperties.h  ProjectTreeModel.cpp  ProjectTreeModel.h  PropertyTableModel.cpp  PropertyTableModel.h  PropertyWidget.cpp  PropertyWidget.h  TreeItem.cpp  TreeItem.h  objectwithproperties.cpp
